--- a/shop.html
+++ b/shop.html
@@ -137,19 +137,20 @@
                     <br>
                     <p class="title">color</p>
                     <div class="flex-color">
-                        <div class="circle-div red"></div>
+                        <i class="fas fa-circle red" ></i>
                         <p>Red (2,429)</p>
+                    
                     </div>
                     <div class="flex-color">
-                        <div class="circle-div g"></div>
+                        <i class="fas fa-circle green"></i>
                         <p>Green (2,298)</p>
                     </div>
                     <div class="flex-color">
-                        <div class="circle-div b"></div>
+                        <i class="fas fa-circle blue"></i>
                         <p>Blue (1,075)</p>
                     </div>
                     <div class="flex-color">
-                        <div class="circle-div p"></div>
+                        <i class="fas fa-circle purple"></i>
                         <p>Purple (1,075)</p>
 
                     </div>
