--- a/shop-single.html
+++ b/shop-single.html
@@ -134,34 +134,34 @@
     <!--start section -->
     <section class="back">
 
-        <section class="back">
-            <section class="container backgroundi mt-5">
+        
+            <section class="container background ">
                 <div class="row justify-content-lg-center">
                     <div
-                        class="card margi col-lg-3 col-md-6 col-sm-12 imgi  justify-content-lg-center justify-content-md-between">
+                        class="card margi col-lg-3 col-md-5 col-sm-12 imgi  justify-content-lg-center justify-content-md-between">
                         <img src="Images/cloth_1.jpg" class="card-img-top " alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Tank Top</h5>
-                            <p class="card-text">Dinding perfect products</p>
-                            <p class="prici">$50</p>
+                        <div class="card-body  ">
+                            <h5 class="card-title  ">Tank Top</h5>
+                            <p class="card-text">Finding perfect products</p>
+                            <h5 >$50</h5>
                         </div>
                     </div>
 
-                    <div class="card margi col-lg-3 col-md-6 col-sm-12 imgi">
+                    <div class="card margi col-lg-3 col-md-5 col-sm-12 imgi">
                         <img src="Images/shoe_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Corater</h5>
-                            <p class="card-text">Dinding perfect products</p>
-                            <p class="prici">$50</p>
+                            <h5 class="card-title  ">Corater</h5>
+                            <p class="card-text  ">Finding perfect products</p>
+                            <h5 >$50</h5>
                         </div>
                     </div>
 
-                    <div class="card margi col-lg-3 col-md-6 col-sm-12 imgi">
+                    <div class="card margi col-lg-3 col-md-5 col-sm-12 imgi">
                         <img src="Images/cloth_2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Polo Shirt</h5>
-                            <p class="card-text">Dinding perfect products</p>
-                            <p class="prici">$50</p>
+                        <div class="card-body ">
+                            <h5 class="card-title ">Polo Shirt</h5>
+                            <p class="card-text ">Finding perfect products</p>
+                            <h5>$50</h5>
                         </div>
                     </div>
                 </div>
